--- a/index.html
+++ b/index.html
@@ -180,8 +180,35 @@
     <p class="setup-similar-label">Петр Петров</p>
   </div>
 </template>
+<script type="text/javascript">
+  var fireballSize = 22;
+  var getFireballSpeed = function(left){
+    if(left){
+      var fireballSpeed = 5;
+      return fireballSpeed;
+    }
+    else {
+      fireballSpeed = 2;
+      return fireballSpeed;
+    }
+  };
+  var wizardSpeed = 2;
+  var wizardWidth = 70;
+  var getWizardHeight = function(wizardWidth){
+    var wizardHeight = 1.337*wizardWidth;
+    return wizardHeight;
+  };
+    var getWizardX = function(width){
+    return width/2;
+  };
+  var getWizardY = function(height){
+    return height/2/3;
+  };
+</script>
+<script src="js/game.js">
 
-<script src="js/game.js"></script>
+</script>
 
 </body>
 </html>
+
