--- a/index.html
+++ b/index.html
@@ -183,7 +183,6 @@
 <script type="text/javascript">
   var fireballSize = 22;
   var getFireballSpeed = function(left){
-    if(left){
      return left ? 5 : 2;
   };
   var wizardSpeed = 2;
@@ -193,10 +192,10 @@
     return wizardHeight;
   };
   var getWizardX = function(width){
-    return width/2 - wizardWidth/2;
+    return width/2 + wizardWidth/2;
   };
   var getWizardY = function(height){
-    return height*2/3;
+    return height/3;
   };
 </script>
 <script src="js/game.js">
